@@ -24,8 +24,8 @@ FWNAME = ipfw
 STD_OBJS = miniupnpd.o upnphttp.o upnpdescgen.o upnpsoap.o \
           upnpredirect.o getifaddr.o daemonize.o upnpglobalvars.o \
           options.o upnppermissions.o minissdp.o natpmp.o \
-          upnpevents.o
-MAC_OBJS = mac/getifstats.o
+	  upnpevents.o getconnstatus.o upnputils.o
+MAC_OBJS = mac/getifstats.o bsd/ifacewatcher.o
 IPFW_OBJS = ipfw/ipfwrdr.o
 MISC_OBJS = upnpreplyparse.o minixml.o
 
